# uchebnaya_parktika

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  INFRA.md  README.md  config.json  docker-compose.yml  main.cc
.github/workflows/: ci.yml
controllers/: ApiController.cc  ApiController.h  AuthController.cc  AuthController.h  HaikuController.cc  HaikuController.h  HappyController.cc  HappyController.h  HelloController.cc  HelloController.h  Helpers.h  PageController.cc  PageController.h
db/: init.sql
hasher/: Dockerfile  app.py
hasher/tests/: test_app.py
k8s/: README.md  configmap.yaml  docs.md  hasher.yaml  hpa.yaml  namespace.yaml  postgres.yaml  praktika.yaml  secret.example.yaml
models/: Haiku.h  User.h
tests/: CMakeLists.txt  test_utils.cc
utils/: Env.h  Validation.h
